@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fixed an issue which caused restoring a whole partitioned table from a
+   snapshot to fail.
+
  - Fix: Index columns based on string arrays are correctly populated with values.
 
  - Updated crate-admin to ``1.1.1`` which includes the following changes:
